--- a/membershipEndpoint.html
+++ b/membershipEndpoint.html
@@ -38,10 +38,7 @@
 
                 <h2>Elton John Sydney</h2>
 
-                <p>Thursday, 9 January 2020</p>
-
-                <p>8:00 pm</p>
-
+                <p>Thursday, 9 January 2020 8:00pm</p>
 
             </div>
 
